cmake_minimum_required(VERSION 3.10.2)

project(advent2021 CXX)

add_executable(advent2021-day01 cpp/day01.cpp cpp/advent.h inputs/day1_input.txt)
add_executable(advent2021-day02 cpp/day02.cpp cpp/advent.h inputs/day2_input.txt)
add_executable(advent2021-day03 cpp/day03.cpp cpp/advent.h inputs/day3_input.txt)
add_executable(advent2021-day04 cpp/day04.cpp cpp/advent.h inputs/day4_input.txt)
add_executable(advent2021-day05 cpp/day05.cpp cpp/advent.h inputs/day5_input.txt)
add_executable(advent2021-day06 cpp/day06.cpp cpp/advent.h inputs/day6_input.txt)
add_executable(advent2021-day07 cpp/day07.cpp cpp/advent.h inputs/day7_input.txt)
add_executable(advent2021-day08 cpp/day08.cpp cpp/advent.h inputs/day8_input.txt)
